# ByteManipulator

./: CMakeLists.txt  doxyConfig  install.sh  main.cpp
source/: BracketParser.cpp  BracketParser.hpp  ByteManipulator.cpp  ByteManipulator.hpp  CombinedView.cpp  CombinedView.hpp  ControlElement.cpp  ControlElement.hpp  FiddlerFlagView.cpp  FiddlerFlagView.hpp  FiddlerFullView.cpp  FiddlerFullView.hpp  FiddlerInterpretationView.cpp  FiddlerInterpretationView.hpp  FiddlerViewModes.cpp  FiddlerViewModes.hpp  GenericView.hpp  InputLogger.cpp  InputLogger.hpp  InputOutputFacility.hpp  InputOutputHandler.hpp  InputPreprocessor.hpp  InstructionMap.cpp  InstructionMap.hpp  InstructionRegistry.hpp  InstructionSequence.cpp  InstructionSequence.hpp  InstructionWrapper.hpp  MockFiddler.cpp  MockFiddler.hpp  MockFiddlerView.hpp  NoOperation.cpp  NoOperation.hpp  NumberStringParser.hpp  NumericInputCommand.hpp  OptionParser.cpp  OptionParser.hpp  OutputLogger.hpp  PrintViewToFile.cpp  PrintViewToFile.hpp  (+15 more)
source/FiddlerCommands/: FiddlerAddition.cpp  FiddlerAddition.hpp  FiddlerAnd.cpp  FiddlerAnd.hpp  FiddlerChangeView.cpp  FiddlerChangeView.hpp  FiddlerCommand.hpp  FiddlerDecrement.cpp  FiddlerDecrement.hpp  FiddlerDivision.cpp  FiddlerDivision.hpp  FiddlerIncrement.cpp  FiddlerIncrement.hpp  FiddlerLeftShift.cpp  FiddlerLeftShift.hpp  FiddlerLogic.cpp  FiddlerLogic.hpp  FiddlerMath.cpp  FiddlerMath.hpp  FiddlerNegate.cpp  (+18 more)
tests/: BracketParser_test.cpp  ByteChain_test.cpp  ByteChain_utils_test.cpp  RegisterFiddler_tests.cpp  StringNumberConverter_tests.cpp  string_utils_test.cpp
(+56 files in other folders)
